<resources>
    <string name="google_drive_client_id">652150810544-cu336cl4hc2li7f5miat11n9ksa3dfpl.apps.googleusercontent.com</string>
    <string name="app_name">Key Man</string>
    <string name="login_btn_txt">ورود</string>
    <string name="sign_btn_txt">ثبت</string>
    <string name="notice_txt">
            برای ورود یک رمز عبور انتخاب کنید\n
            (حداقل هشت کاراکتر)
    </string>
    <string name="sign_notice_txt">رمز عبور خود را وارد کنید</string>
    <string name="password_edit_txt_hint">رمز عبور</string>
    <string name="confirm_edit_txt_hint">تکرار رمز عبور</string>
    <string name="login_error_1">اشتباه است.</string>
    <string name="wrong_password_error">رمز عبور اشتباه است.</string>
    <string name="using_tv_title">استفاده از :</string>
    <string name="alphabet_lower_case">حروف کوچک</string>
    <string name="alphabet_upper_case">حروف بزرگ</string>
    <string name="numbers">اعداد</string>
    <string name="special_chars">دیگر کاراکتر ها</string>
    <string name="copy_notice">برای کپی کردن برروی رمز عبور کلیک کنید.</string>
    <string name="save_btn_title">ذخیره</string>
    <string name="cancel_btn_title">لغو</string>
    <string name="password_length">تعداد کارکتر ها:</string>
    <string name="copy_massage">کپی شد</string>
    <string name="title_tv_txt">عنوان :</string>
    <string name="title_tv_hint">یک عنوان برای ذخیره وارد کنید</string>
    <string name="no_document_notice">مطلبی جهت نمایش وجود ندارد</string>
    <string name="title_warning">عنوانی برای ذخیره انتخاب نکرده اید.</string>
    <string name="delete_dialog_message">آیا مطمئنید می خوااهید این آیتم را حذف کنید؟</string>
    <string name="no">نه</string>
    <string name="yes">بله</string>
    <string name="delete_menu_title">حذف</string>
    <string name="edit_menu_title">ویرایش</string>
    <string name="copy_menu_title">کپی</string>
    <string name="custom_choice">وارد کردن رمز دلخواه</string>
    <string name="custom_pass_edittext_hint">رمز عبور خود را وارد کنید</string>
    <string name="password_error">قسمت رمز نمی تواند خالی باشد</string>
    <string name="save_message">ذخیره شد</string>
    <string name="build_version_text">نسخه</string>
    <string name="search_hint">جستجو</string>
    <string name="nav_drawer_options">تنظیمات</string>
    <string name="password_txt">رمز :</string>
    <string name="copy_description">کپی</string>
    <string name="delete_description">حذف</string>
    <string name="night_mode">حالت شب</string>
    <string name="day_mode">حالت روز</string>
    <string name="backup">پشتیبان گیری</string>
    <string name="restore">بازیابی</string>
    <string name="password_reset">تغییر رمز عبور</string>
    <string name="backup_progress">در حال بارگزاری در گوگل درایو …</string>
    <string name="connection_dialog_title">اتصال اینترنت برقرار نیست</string>
    <string name="connection_dialog_message">لطفا اتصال خود را به اینترنت بررسی کنید.</string>
    <string name="connection_dialog_wifi_title">وای فای</string>
    <string name="connection_dialog_data_connect">اتصال دیتا</string>
    <string name="connection_dialog_retry">تلاش دوباره</string>
    <string name="upload_file_success_message">پشتیبان گیری با موفقیت انجام شد</string>
    <string name="upload_file_failure_message">پشتیبان گیری انجام نشد</string>
    <string name="sign_in_failure_message">خطایی رخ داده است.</string>
    <string name="restore_progress">در حال بارگیری از گوگل درایو …</string>
    <string name="restore_success_message">بازیابی با موفقیت انجام شد</string>
    <string name="restore_failure_message">بازیابی انجام نشد</string>
    <string name="answer_hint">جواب خود را وارد کنید</string>
    <string name="forget_fragment_btn_txt">بررسی</string>
    <string name="forget_password_tv">رمز عبور خود را فراموش کرده اید ؟</string>
    <string name="answer_edit_text_error">جواب نمی تواند خالی باشد</string>
    <string name="answer_doesnt_match">جواب درست نیست</string>
    <string name="minimum_password_size_error">حداقل هشت کاراکتر</string>
    <string name="new_title_tv">عنوان جدید را وارد کنید</string>
    <string name="no_file_error">فایلی در گوگل درایو جهت بارگیری وچود ندارد</string>
    <string name="error_title">خطا</string>
    <string name="close_button_txt">بستن</string>
    <string name="prev_pass_edit_txt_hint">رمز عبور خود را وارد کنید</string>
    <string name="new_pass_edt_txt_hint">رمز جدید را وارد کنید</string>
    <string name="confirm_pass_edt_txt_hint">رمز خود را دوباره وارد کنید</string>
    <string name="forget_quest_txt">تغییر دادن سوال پشتیبانی</string>
    <string name="edit_pass_txt">تغییر دادن رمز عبور</string>
    <string name="change_pass_error1">رمز عبور اشتباه است</string>
    <string name="change_pass_error2">آیتمی برای تغییر دادن انتخاب نشده است</string>
    <string name="developer_name">توسعه دهنده : محی الدین ایمانی</string>
    <string name="about_menu_item_text">درباره</string>
    <string name="call_us">تماس با ما</string>
    <string name="gmail">Keymanager.info@gmail.com</string>
    <string name="add_nav_menu">رمز جدید</string>
    <string name="show_nav_menu">لیست</string>
    <string name="optionsl_nav">امکانات</string>
    <string name="info_nav">درباره ما</string>
</resources>