<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/change_login_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layoutDirection="rtl"
    android:gravity="center"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_query_bg"
        android:layout_margin="@dimen/change_login_pass_et_margin"
        android:gravity="start"
        android:id="@+id/prev_pass"
        android:textSize="@dimen/common_text_size"
        android:padding="@dimen/change_login_pass_et_padding"
        android:inputType="textPassword"
        android:hint="@string/prev_pass_edit_txt_hint"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_pass_check_box"
        android:textSize="@dimen/common_text_size"
        android:checked="true"
        android:text="@string/edit_pass_txt"
        android:layout_margin="@dimen/change_login_pass_check_box_margin"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_pass"
        android:textSize="@dimen/common_text_size"
        android:inputType="textPassword"
        android:gravity="start"
        android:background="@drawable/search_query_bg"
        android:layout_margin="@dimen/change_login_pass_et_margin"
        android:padding="@dimen/change_login_pass_et_padding"
        android:hint="@string/new_pass_edt_txt_hint"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_pass"
        android:textSize="@dimen/common_text_size"
        android:inputType="textPassword"
        android:background="@drawable/search_query_bg"
        android:layout_margin="@dimen/change_login_pass_et_margin"
        android:padding="@dimen/change_login_pass_et_padding"
        android:gravity="start"
        android:hint="@string/confirm_pass_edt_txt_hint"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/common_text_size"
        android:checked="false"
        android:id="@+id/change_forget_quest_checkbox"
        android:layout_margin="@dimen/change_login_pass_check_box_margin"
        android:text="@string/forget_quest_txt"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ques_spinner"
        android:textAlignment="inherit"
        android:layout_margin="@dimen/change_login_pass_et_margin"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_answer_et"
        android:textSize="@dimen/common_text_size"
        android:background="@drawable/search_query_bg"
        android:padding="@dimen/change_login_pass_et_padding"
        android:layout_margin="@dimen/change_login_pass_et_margin"
        android:hint="@string/answer_hint"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/save_btn"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="@dimen/add_dialog_title_margin"
            android:layout_marginVertical="@dimen/edit_pass_layout_margin"
            android:textSize="@dimen/common_text_size"
            android:textColor="@android:color/white"
            android:text="@string/save_btn_title"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancel_button"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="@dimen/add_dialog_title_margin"
            android:layout_marginVertical="@dimen/edit_pass_layout_margin"
            android:textSize="@dimen/common_text_size"
            android:textColor="@android:color/white"
            android:text="@string/cancel_btn_title"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>