<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/add_dialog_layout_padding"
    android:background="@drawable/dialog_bg"
    android:layoutDirection="rtl"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_dialog_layout_margin_top"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/password_view"
            android:layout_width="@dimen/add_dialog_password_view_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/add_dialog_password_view_margin"
            android:background="@drawable/tv_bg"
            android:textStyle="italic"
            android:gravity="center"
            android:textAlignment="center"
            android:maxLines="1"
            android:drawableEnd="@drawable/ic_baseline_file_copy_24"
            app:drawableTint="@color/text_color"
            android:padding="@dimen/add_dialog_layout_padding"
            android:textSize="@dimen/add_dialog_password_view_txt_size" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/add_dialog_refresh_btn_padding"
            android:scaleType="fitXY"
            android:tint="@color/icon_tint"
            android:background="@drawable/btn_bg"
            android:src="@drawable/ic_baseline_refresh_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_dialog_notice_txt_size"
        android:scrollbars="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/copy_notice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_dialog_title_txt_size"
        android:layout_margin="@dimen/add_dialog_title_margin"
        android:text="@string/using_tv_title"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_dialog_check_layout_margin"
            android:layout_weight="1"
            android:gravity="start"
            android:layoutDirection="rtl"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="@dimen/common_text_size"
                android:id="@+id/lower_alphabet"
                android:text="@string/alphabet_lower_case"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_size"
                android:id="@+id/upper_alphabet"
                android:text="@string/alphabet_upper_case"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layoutDirection="rtl"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/add_dialog_check_layout_margin"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numbers"
                android:textSize="@dimen/common_text_size"
                android:checked="true"
                android:layout_weight="1"
                android:text="@string/numbers"
                />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/common_text_size"
                android:id="@+id/special_chars"
                android:text="@string/special_chars"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_dialog_title_txt_size"
        android:layout_margin="@dimen/add_dialog_title_margin"
        android:text="@string/password_length"/>
    <com.mohyeddin.passwordmanager.views.ValueSelector
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/add_dialog_v_selector_margin"
        android:gravity="center"
        android:id="@+id/value_selector"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/common_text_size"
        android:id="@+id/custom_choice"
        android:text="@string/custom_choice"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/add_dialog_e_text_padding"
        android:background="@drawable/search_query_bg"
        android:lines="1"
        android:layout_margin="@dimen/add_dialog_title_margin"
        android:textSize="@dimen/common_text_size"
        android:hint="@string/custom_pass_edittext_hint"
        android:enabled="false"
        android:id="@+id/custom_password"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_dialog_title_txt_size"
        android:layout_margin="@dimen/add_dialog_title_margin"
        android:text="@string/title_tv_txt"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/common_text_size"
        android:id="@+id/title_edit_text"
        android:background="@drawable/search_query_bg"
        android:layout_margin="@dimen/add_dialog_title_margin"
        android:padding="@dimen/add_dialog_e_text_padding"
        android:lines="1"
        android:hint="@string/title_tv_hint"/>
</androidx.appcompat.widget.LinearLayoutCompat>
