<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:layout_marginBottom="@dimen/edit_pass_layout_bottom_margin"
        android:layout_marginTop="@dimen/edit_pass_layout_margin"
        android:layout_marginEnd="@dimen/edit_pass_layout_margin"
        android:layout_marginStart="@dimen/edit_pass_layout_margin"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/e_password_view"
            android:layout_width="@dimen/edit_e_pass_view_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/edit_e_pass_view_margin"
            android:background="@drawable/tv_bg"
            android:textStyle="italic"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textAlignment="center"
            android:maxLines="1"
            android:drawableEnd="@drawable/ic_baseline_file_copy_24"
            app:drawableTint="@color/text_color"
            android:padding="@dimen/edit_e_pass_view_padding"
            android:textSize="@dimen/edit_e_pass_view_text_size" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/e_refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/edit_refresh_btn_margin"
            android:padding="@dimen/edit_refresh_btn_padding"
            android:scaleType="fitXY"
            android:tint="@color/icon_tint"
            android:background="@drawable/btn_bg"
            android:src="@drawable/ic_baseline_refresh_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_notice_text_size"
        android:scrollbars="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/copy_notice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_tile_text_size"
        android:layout_margin="@dimen/edit_title_margin"
        android:text="@string/using_tv_title"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_check_layout_margin"
            android:layout_weight="1"
            android:gravity="start"
            android:layoutDirection="rtl"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/common_text_size"
                android:checked="true"
                android:id="@+id/e_lower_alphabet"
                android:text="@string/alphabet_lower_case"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/common_text_size"
                android:layout_height="wrap_content"
                android:id="@+id/e_upper_alphabet"
                android:text="@string/alphabet_upper_case"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layoutDirection="rtl"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/edit_check_layout_margin"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/e_numbers"
                android:checked="true"
                android:textSize="@dimen/common_text_size"
                android:layout_weight="1"
                android:text="@string/numbers"
                />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/common_text_size"
                android:id="@+id/e_special_chars"
                android:text="@string/special_chars"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_tile_text_size"
        android:layout_margin="@dimen/edit_title_margin"
        android:text="@string/password_length"/>
    <com.mohyeddin.passwordmanager.views.ValueSelector
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/edit_value_selector_margin"
        android:gravity="center"
        android:id="@+id/e_value_selector"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/common_text_size"
        android:layout_margin="@dimen/edit_check_layout_margin"
        android:id="@+id/e_custom_choice"
        android:text="@string/custom_choice"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:textSize="@dimen/common_text_size"
        android:layout_height="wrap_content"
        android:padding="@dimen/edit_et_padding"
        android:background="@drawable/search_query_bg"
        android:lines="1"
        android:layout_margin="@dimen/edit_et_margin"
        android:hint="@string/custom_pass_edittext_hint"
        android:enabled="false"
        android:id="@+id/e_custom_password"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/save_btn"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="@dimen/add_dialog_title_margin"
            android:layout_marginVertical="@dimen/edit_pass_layout_margin"
            android:textSize="@dimen/common_text_size"
            android:textColor="@android:color/white"
            android:text="@string/save_btn_title"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancel_button"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="@dimen/add_dialog_title_margin"
            android:layout_marginVertical="@dimen/edit_pass_layout_margin"
            android:textSize="@dimen/common_text_size"
            android:textColor="@android:color/white"
            android:text="@string/cancel_btn_title"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>