<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layoutDirection="rtl"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_notice_txt"
        android:layoutDirection="rtl"
        android:textSize="@dimen/common_text_size"
        android:layout_gravity="center"
        android:layout_margin="@dimen/login_tv_margin"
        android:id="@+id/notice_tv"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_key_24"
        android:hint="@string/password_edit_txt_hint"
        android:layout_margin="@dimen/login_et_margin"
        android:layoutDirection="ltr"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size"
            android:inputType="textPassword"
            android:id="@+id/login_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:textSize="@dimen/login_btn_text_size"
        android:textColor="@color/text_color"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_txt"
        android:background="@drawable/btn_bg"
        android:layout_margin="@dimen/login_btn_margin"
        android:id="@+id/login_btn"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/common_text_size"
        android:text="@string/forget_password_tv"
        android:id="@+id/forget_pass_tv"
        android:layout_margin="@dimen/login_tv_margin"/>
</androidx.appcompat.widget.LinearLayoutCompat>